--- a/projects/auto-requests/src/app/features/requests/components/tabs/tabs.component.less
+++ b/projects/auto-requests/src/app/features/requests/components/tabs/tabs.component.less
@@ -2,10 +2,10 @@
 @tab-border-bottom: 3px solid transparent;
 @tab-border-bottom-hover: 3px solid #e3f2fd;
 @tab-border-bottom-selected: 3px solid #039BE5;
-@title-font-family: 'Open Sans Light';
+@title-font-family: 'Open Sans Regular';
 @title-font-family-selected: 'Open Sans Regular';
 @title-font-size: 15px;
-@title-color: black;
+@title-color: #263238;
 @title-color-selected: #039BE5;
 @indicator-width: 20px;
 @indicator-height: 20px;
