--- a/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/articles-block/articles-block.component.html
@@ -130,8 +130,8 @@
               <div class="background"style="background: url('assets/images/zaborshikova.jpg')"></div>
               <div class="details">
                 <!--
-                <div class="date-and-attachments">
-                  <div class="date">12 марта 2020</div>
+                <div class="selectedDate$-and-attachments">
+                  <div class="selectedDate$">12 марта 2020</div>
                 </div>
                 -->
                 <div class="title">Елена заборщикова</div>
@@ -144,8 +144,8 @@
             <div class="background"style="background: url('assets/images/zaborshikova.jpg')"></div>
             <div class="details">
               <!--
-              <div class="date-and-attachments">
-                <div class="date">12 марта 2020</div>
+              <div class="selectedDate$-and-attachments">
+                <div class="selectedDate$">12 марта 2020</div>
               </div>
               -->
               <div class="title">Елена заборщикова</div>
@@ -158,8 +158,8 @@
               <div class="background"style="background: url('assets/images/zaborshikova.jpg')"></div>
               <div class="details">
                 <!--
-                <div class="date-and-attachments">
-                  <div class="date">12 марта 2020</div>
+                <div class="selectedDate$-and-attachments">
+                  <div class="selectedDate$">12 марта 2020</div>
                 </div>
                 -->
                 <div class="title">Елена заборщикова</div>
@@ -172,8 +172,8 @@
               <div class="background"style="background: url('assets/images/zaborshikova.jpg')"></div>
               <div class="details">
                 <!--
-                <div class="date-and-attachments">
-                  <div class="date">12 марта 2020</div>
+                <div class="selectedDate$-and-attachments">
+                  <div class="selectedDate$">12 марта 2020</div>
                 </div>
                 -->
                 <div class="title">Елена заборщикова</div>
@@ -189,8 +189,8 @@
                   <div class="background" style="background: url('assets/images/cikota.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Вера Цикота</div>
@@ -202,8 +202,8 @@
                   <div class="background" style="background: url('assets/images/govorov.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Александр Говоров</div>
@@ -217,8 +217,8 @@
                   <div class="background" style="background: url('assets/images/chuprov.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Алексей Чупров</div>
@@ -230,8 +230,8 @@
                   <div class="background" style="background: url('assets/images/yatskovskaya.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Наталья Яцковская</div>
@@ -248,8 +248,8 @@
                   <div class="background" style="background: url('assets/images/cikota.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Вера Цикота</div>
@@ -261,8 +261,8 @@
                   <div class="background" style="background: url('assets/images/govorov.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Александр Говоров</div>
@@ -276,8 +276,8 @@
                   <div class="background" style="background: url('assets/images/chuprov.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Алексей Чупров</div>
@@ -289,8 +289,8 @@
                   <div class="background" style="background: url('assets/images/yatskovskaya.jpg')"></div>
                   <div class="details">
                     <!--
-                    <div class="date-and-attachments">
-                      <div class="date">12 марта 2020</div>
+                    <div class="selectedDate$-and-attachments">
+                      <div class="selectedDate$">12 марта 2020</div>
                     </div>
                     -->
                     <div class="title">Наталья Яцковская</div>
