--- a/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.less
+++ b/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.less
@@ -1,3 +1,7 @@
+@placeholder-font-family: 'Open Sans Regular';
+@placeholder-font-size: 20px;
+@placeholder-color: #e0e0e0;
+
 :host {
   display: flex;
   height: 100%;
@@ -11,4 +15,17 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+
+  .no-requests-placeholder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-family: @placeholder-font-family;
+    font-size: @placeholder-font-size;
+    line-height: @placeholder-font-size + 2px;
+    color: @placeholder-color;
+    text-align: center;
+  }
 }
