AUTO: Edit request dialog added

--- a/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
+++ b/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
@@ -1,5 +1,5 @@
-@side-width: 250px;
-@side-background-color: linear-gradient(#bbdefb, #e3f2fd);
+@side-width: 300px;
+@side-background-color: linear-gradient(#e3f2fd, white);
 @subtitle-font-family: 'Open Sans Regular';
 @subtitle-font-size: 13px;
 @subtitle-color: #607d8b;
