--- a/projects/auto-requests/src/app/features/requests/components/route-path/route-path.component.html
+++ b/projects/auto-requests/src/app/features/requests/components/route-path/route-path.component.html
@@ -19,7 +19,7 @@
             <mat-icon color="primary">arrow_downward</mat-icon>
             <span>Переместить вниз</span>
           </button>
-          <button mat-menu-item (click)="remove($index)">
+          <button mat-menu-item (click)="removeRoute($index)">
             <mat-icon color="warn">delete</mat-icon>
             <span>Удалить</span>
           </button>
