--- a/projects/auto-requests/src/app/features/requests/components/requests-grid/requests-grid.component.html
+++ b/projects/auto-requests/src/app/features/requests/components/requests-grid/requests-grid.component.html
@@ -1,11 +1,12 @@
 <div class="grid pb-5">
 
 
-  <div class="request" *ngFor="let request of requests, index as index$">
+  <div class="request"
+       *ngFor="let request of requests, index as index$"
+       (click)="selectRequest(request)">
 
       <!-- Start: Номер заявки и статус -->
       <div class="data-block number-and-status" [ngStyle]="{'background': request.status.foregroundColor}">
-        <!--<div class="label">#349</div>-->
         <div class="details justify-content-between align-items-center">
           <span class="secondary-data">#{{request.id}}</span>
           <mat-icon class="mt-2"
@@ -36,7 +37,6 @@
 
       <!-- Start: О поездке -->
       <div class="data-block description">
-        <!--<div class="label">О поездке</div>-->
         <div class="details mb-1">
           <div class="label">Дата и время поездки</div>
           <span class="primary-data">{{request.startTimeD | date:'dd MMM hh:mm'}} &mdash; {{request.endTimeD | date:'hh:mm'}}</span>
@@ -51,7 +51,6 @@
 
       <!-- Start: Время / маршрут -->
       <div class="data-block time-and-route">
-        <!--<div class="label">Длительность / маршрут</div>-->
         <div class="details h-100">
           <div class="label">Маршрут поездки</div>
           <div class="route-path">
@@ -69,7 +68,6 @@
 
       <!-- Start: Автомобиль -->
       <div class="data-block transport-and-driver">
-        <!--<div class="label">Автомобиль / водитель</div>-->
         <div class="details mb-1">
           <div class="label">Транспорт</div>
           <ng-container *ngIf="request.transport">
